--- a/frontend/src/views/auth/register.njk
+++ b/frontend/src/views/auth/register.njk
@@ -8,10 +8,8 @@
 
     <div class="flex flex-col items-center mb-10">
         <div
-            class="w-14 h-14 bg-[#FD420A] rounded-2xl flex items-center justify-center shadow-[0_0_30px_rgba(253,66,10,0.4)] mb-4">
-            <svg class="w-8 h-8 text-white" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
-                <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" />
-            </svg>
+            class="w-24 h-24 rounded-2xl flex items-center justify-center mb-4">
+            <img src="/public/img/logo.png">
         </div>
         <h1 class="text-2xl font-bold tracking-tight">Nexo<span class="text-[#FD420A]">Local</span></h1>
     </div>
