--- a/frontend/src/views/components/dashboard-sidebar.njk
+++ b/frontend/src/views/components/dashboard-sidebar.njk
@@ -207,9 +207,9 @@
                 <p class="text-[10px] font-bold text-gray-500 uppercase tracking-widest mb-1">Mi Cuenta</p>
                 <p class="text-xs font-medium truncate text-white">{{user.email}}</p>
             </div>
-            <a href="#" class="dropdown-link"><span><i class="fa-utility-fill fa-semibold fa-user"></i></span>
-                Perfil</a>
-            <a href="#" class="dropdown-link"><span><i class="fa-utility-fill fa-semibold fa-cog"></i></span>
+            {# <a href="#" class="dropdown-link"><span><i class="fa-utility-fill fa-semibold fa-user"></i></span>
+                Perfil</a> #}
+            <a href="/users/settings" class="dropdown-link"><span><i class="fa-utility-fill fa-semibold fa-cog"></i></span>
                 Ajustes</a>
             <a href="/auth/logout" class="dropdown-link logout-link"><span><i
                         class="fa-utility-fill fa-semibold fa-arrow-left-from-bracket"></i></span> Cerrar Sesión</a>
